--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <a href="store/cryhrd-001/" class="merch-link">
           <div class="merch-block">
             <div class="merch-block-image-container">
-              <img src="assets/images/products/cryhrd-001/cryhrd-001.webp" alt="Product Image" class="merch-block-product-image default-image">
+              <img src="assets/images/products/cryhrd-001/cryhrd-001.webp" alt="" class="merch-block-product-image default-image">
               <img src="assets/images/products/cryhrd-001/cryhrd-001-hover.webp" alt="" class="merch-block-product-image hover-image">
             </div>
             <div class="merch-block-details-container">
@@ -112,7 +112,7 @@
         <a href="store/mcr-012/" class="merch-link">
           <div class="merch-block">
             <div class="merch-block-image-container">
-              <img src="assets/images/products/mcr-012/mcr-012.webp" alt="Product Image" class="merch-block-product-image default-image">
+              <img src="assets/images/products/mcr-012/mcr-012.webp" alt="" class="merch-block-product-image default-image">
               <img src="assets/images/products/mcr-012/mcr-012-hover.webp" alt="" class="merch-block-product-image hover-image">
             </div>
             <div class="merch-block-details-container">
@@ -130,7 +130,7 @@
         <a href="store/mcr-011/" class="merch-link">
           <div class="merch-block">
             <div class="merch-block-image-container">
-              <img src="assets/images/products/mcr-011/mcr-011.webp" alt="Product Image" class="merch-block-product-image default-image">
+              <img src="assets/images/products/mcr-011/mcr-011.webp" alt="" class="merch-block-product-image default-image">
               <img src="assets/images/products/mcr-011/mcr-011-hover.webp" alt="" class="merch-block-product-image hover-image">
             </div>
             <div class="merch-block-details-container">
@@ -148,7 +148,7 @@
         <a href="store/mcr-009/" class="merch-link">
           <div class="merch-block">
             <div class="merch-block-image-container">
-              <img src="assets/images/products/mcr-009/mcr-009.webp" alt="Product Image" class="merch-block-product-image default-image">
+              <img src="assets/images/products/mcr-009/mcr-009.webp" alt="" class="merch-block-product-image default-image">
               <img src="assets/images/products/mcr-009/mcr-009-hover.webp" alt="" class="merch-block-product-image hover-image">
             </div>
             <div class="merch-block-details-container">
@@ -166,7 +166,7 @@
         <a href="store/pndl-001/" class="merch-link">
           <div class="merch-block">
             <div class="merch-block-image-container">
-              <img src="assets/images/products/pndl-001/pndl-001.webp" alt="Product Image" class="merch-block-product-image default-image">
+              <img src="assets/images/products/pndl-001/pndl-001.webp" alt="" class="merch-block-product-image default-image">
               <img src="assets/images/products/pndl-001/pndl-001.webp" alt="" class="merch-block-product-image hover-image">
             </div>
             <div class="merch-block-details-container">
@@ -184,7 +184,7 @@
         <a href="store/mcr-010/" class="merch-link">
           <div class="merch-block">
             <div class="merch-block-image-container">
-              <img src="assets/images/products/mcr-010/mcr-010.webp" alt="Product Image" class="merch-block-product-image default-image">
+              <img src="assets/images/products/mcr-010/mcr-010.webp" alt="" class="merch-block-product-image default-image">
               <img src="assets/images/products/mcr-010/mcr-010-hover.webp" alt="" class="merch-block-product-image hover-image">
             </div>
             <div class="merch-block-details-container">
@@ -202,7 +202,7 @@
         <a href="store/mcr-008/" class="merch-link">
           <div class="merch-block">
             <div class="merch-block-image-container">
-              <img src="assets/images/products/mcr-008/mcr-008.webp" alt="Product Image" class="merch-block-product-image default-image">
+              <img src="assets/images/products/mcr-008/mcr-008.webp" alt="" class="merch-block-product-image default-image">
               <img src="assets/images/products/mcr-008/mcr-008-hover.webp" alt="" class="merch-block-product-image hover-image">
             </div>
             <div class="merch-block-details-container">
@@ -220,7 +220,7 @@
         <a href="store/mcr-007/" class="merch-link">
           <div class="merch-block">
             <div class="merch-block-image-container">
-              <img src="assets/images/products/mcr-007/mcr-007.webp" alt="Product Image" class="merch-block-product-image default-image">
+              <img src="assets/images/products/mcr-007/mcr-007.webp" alt="" class="merch-block-product-image default-image">
               <img src="assets/images/products/mcr-007/mcr-007-hover.webp" alt="" class="merch-block-product-image hover-image">
             </div>
             <div class="merch-block-details-container">
@@ -238,7 +238,7 @@
         <a href="store/mcr-006/" class="merch-link">
           <div class="merch-block">
             <div class="merch-block-image-container">
-              <img src="assets/images/products/mcr-006/mcr-006.webp" alt="Product Image" class="merch-block-product-image default-image">
+              <img src="assets/images/products/mcr-006/mcr-006.webp" alt="" class="merch-block-product-image default-image">
               <img src="assets/images/products/mcr-006/mcr-006-hover.webp" alt="" class="merch-block-product-image hover-image">
             </div>
             <div class="merch-block-details-container">
@@ -256,7 +256,7 @@
         <a href="store/mcr-005/" class="merch-link">
           <div class="merch-block">
             <div class="merch-block-image-container">
-              <img src="assets/images/products/mcr-005/mcr-005.webp" alt="Product Image" class="merch-block-product-image default-image">
+              <img src="assets/images/products/mcr-005/mcr-005.webp" alt="" class="merch-block-product-image default-image">
               <img src="assets/images/products/mcr-005/mcr-005-hover.webp" alt="" class="merch-block-product-image hover-image">
             </div>
             <div class="merch-block-details-container">
@@ -274,7 +274,7 @@
         <a href="store/mcr-004/" class="merch-link">
           <div class="merch-block">
             <div class="merch-block-image-container">
-              <img src="assets/images/products/mcr-004/mcr-004.webp" alt="Product Image" class="merch-block-product-image default-image">
+              <img src="assets/images/products/mcr-004/mcr-004.webp" alt="" class="merch-block-product-image default-image">
               <img src="assets/images/products/mcr-004/mcr-004-hover.webp" alt="" class="merch-block-product-image hover-image">
             </div>
             <div class="merch-block-details-container">
@@ -292,7 +292,7 @@
         <a href="store/new-005/" class="merch-link">
           <div class="merch-block">
             <div class="merch-block-image-container">
-              <img src="assets/images/products/new-005/new-005.webp" alt="Product Image" class="merch-block-product-image default-image">
+              <img src="assets/images/products/new-005/new-005.webp" alt="" class="merch-block-product-image default-image">
               <img src="assets/images/products/new-005/new-005-hover.webp" alt="" class="merch-block-product-image hover-image">
             </div>
             <div class="merch-block-details-container">
@@ -310,7 +310,7 @@
         <a href="store/mcr-003/" class="merch-link">
           <div class="merch-block">
             <div class="merch-block-image-container">
-              <img src="assets/images/products/mcr-003/mcr-003.webp" alt="Product Image" class="merch-block-product-image default-image">
+              <img src="assets/images/products/mcr-003/mcr-003.webp" alt="" class="merch-block-product-image default-image">
               <img src="assets/images/products/mcr-003/mcr-003-hover.webp" alt="" class="merch-block-product-image hover-image">
             </div>
             <div class="merch-block-details-container">
@@ -328,7 +328,7 @@
         <a href="store/mcr-001/" class="merch-link">
           <div class="merch-block">
             <div class="merch-block-image-container">
-              <img src="assets/images/products/mcr-001/mcr-001.webp" alt="Product Image" class="merch-block-product-image default-image">
+              <img src="assets/images/products/mcr-001/mcr-001.webp" alt="" class="merch-block-product-image default-image">
               <img src="assets/images/products/mcr-001/mcr-001-hover.webp" alt="" class="merch-block-product-image hover-image">
             </div>
             <div class="merch-block-details-container">
@@ -346,7 +346,7 @@
         <a href="store/mcr-002/" class="merch-link">
           <div class="merch-block">
             <div class="merch-block-image-container">
-              <img src="assets/images/products/mcr-002/mcr-002.webp" alt="Product Image" class="merch-block-product-image default-image">
+              <img src="assets/images/products/mcr-002/mcr-002.webp" alt="" class="merch-block-product-image default-image">
               <img src="assets/images/products/mcr-002/mcr-002-hover.webp" alt="" class="merch-block-product-image hover-image">
             </div>
             <div class="merch-block-details-container">
@@ -364,7 +364,7 @@
         <!-- <a href="store/new-001/" class="merch-link">
           <div class="merch-block">
             <div class="merch-block-image-container">
-              <img src="assets/images/products/new-001/new-001.webp" alt="Product Image" class="merch-block-product-image default-image">
+              <img src="assets/images/products/new-001/new-001.webp" alt="" class="merch-block-product-image default-image">
               <img src="assets/images/products/new-001/new-001-hover.webp" alt="" class="merch-block-product-image hover-image">
             </div>
             <div class="merch-block-details-container">
