--- a/sliderhand/index.html
+++ b/sliderhand/index.html
@@ -63,8 +63,12 @@
 
         <div class="artist-bar">
 
+
+
           <div class="artist-social-icons">
-            <!-- <a href=""><img src="../../assets/images/social-icons/facebook-icon.svg" alt="Facebook Icon"></a> -->
+            <!-- <a href=""><img src="../../assets/images/social-icons/apple-music-icon.webp" alt="Apple Music Icon"></a> -->
+            <!-- <a href=""><img src="../../assets/images/social-icons/spotify-icon.webp" alt="Spotify Icon"></a> -->
+            <!-- <a href=""><img src="../../assets/images/social-icons/bandcamp-icon.webp" alt="Bandcamp Icon"></a> -->
             <!-- <a href="https://www.instagram.com/cryhardtypebeat/"><img src="../../assets/images/social-icons/instagram-icon.svg" alt="Instagram Icon"></a> -->
             <!-- <a href="https://www.youtube.com/@Cryhardtypebeat"><img src="../../assets/images/social-icons/youtube-icon.svg" alt="YouTube Icon"></a> -->
             <!-- <a href="https://www.tiktok.com/@cryhardtypebeat"><img src="../../assets/images/social-icons/tiktok-icon.svg" alt="TikTok Icon"></a> -->
@@ -127,5 +131,6 @@
     <script src="../../assets/scripts/CartRefresh.js" async></script>
     <script src="../../assets/scripts/MobileHeaderExpand.js"></script>
     <script src="../../assets/scripts/MerchBlockScrollSwap.js"></script>
+    <script src="../../assets/scripts/McrPlayer.js"></script>
     </body>
 </html>
