--- a/store/mcr-002/index.html
+++ b/store/mcr-002/index.html
@@ -448,7 +448,7 @@
             <a href="../cryhrd-001/" class="merch-link">
               <div class="merch-block">
                 <div class="merch-block-image-container">
-                  <img src="../../assets/images/products/cryhrd-001/cryhrd-001.webp" alt="Product Image" class="merch-block-product-image default-image">
+                  <img src="../../assets/images/products/cryhrd-001/cryhrd-001.webp" alt="" class="merch-block-product-image default-image">
                   <img src="../../assets/images/products/cryhrd-001/cryhrd-001-hover.webp" alt="" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
@@ -466,7 +466,7 @@
             <a href="../mcr-003/" class="merch-link">
               <div class="merch-block">
                 <div class="merch-block-image-container">
-                  <img src="../../assets/images/products/mcr-003/mcr-003.webp" alt="Product Image" class="merch-block-product-image default-image">
+                  <img src="../../assets/images/products/mcr-003/mcr-003.webp" alt="" class="merch-block-product-image default-image">
                   <img src="../../assets/images/products/mcr-003/mcr-003-hover.webp" alt="" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
@@ -484,7 +484,7 @@
             <a href="../mcr-001/" class="merch-link">
               <div class="merch-block">
                 <div class="merch-block-image-container">
-                  <img src="../../assets/images/products/mcr-001/mcr-001.webp" alt="Product Image" class="merch-block-product-image default-image">
+                  <img src="../../assets/images/products/mcr-001/mcr-001.webp" alt="" class="merch-block-product-image default-image">
                   <img src="../../assets/images/products/mcr-001/mcr-001-hover.webp" alt="" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
@@ -502,7 +502,7 @@
             <a href="../new-005/" class="merch-link">
               <div class="merch-block">
                 <div class="merch-block-image-container">
-                  <img src="../../assets/images/products/new-005/new-005.webp" alt="Product Image" class="merch-block-product-image default-image">
+                  <img src="../../assets/images/products/new-005/new-005.webp" alt="" class="merch-block-product-image default-image">
                   <img src="../../assets/images/products/new-005/new-005-hover.webp" alt="" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
