--- a/store/mcr-008/index.html
+++ b/store/mcr-008/index.html
@@ -49,7 +49,7 @@
     <main class="product-section">
       <div class="product-content-container">
         <div class="product-image">
-          <img src="../../assets/images/products/mcr-008/mcr-008-full.webp" alt="Product Image">
+          <img src="../../assets/images/products/mcr-008/mcr-008-full.webp" alt="">
         </div>
         <div class="product-image-spacer"></div>
         <div class="product-details-container">
@@ -449,7 +449,7 @@
             <a href="../pndl-001/" class="merch-link">
               <div class="merch-block">
                 <div class="merch-block-image-container">
-                  <img src="../../assets/images/products/pndl-001/pndl-001.webp" alt="Product Image" class="merch-block-product-image default-image">
+                  <img src="../../assets/images/products/pndl-001/pndl-001.webp" alt="" class="merch-block-product-image default-image">
                   <img src="../../assets/images/products/pndl-001/pndl-001.webp" alt="" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
@@ -467,7 +467,7 @@
             <a href="../mcr-002/" class="merch-link">
               <div class="merch-block">
                 <div class="merch-block-image-container">
-                  <img src="../../assets/images/products/mcr-002/mcr-002.webp" alt="Product Image" class="merch-block-product-image default-image">
+                  <img src="../../assets/images/products/mcr-002/mcr-002.webp" alt="" class="merch-block-product-image default-image">
                   <img src="../../assets/images/products/mcr-002/mcr-002-hover.webp" alt="" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
@@ -485,7 +485,7 @@
             <a href="../mcr-005/" class="merch-link">
               <div class="merch-block">
                 <div class="merch-block-image-container">
-                  <img src="../../assets/images/products/mcr-005/mcr-005.webp" alt="Product Image" class="merch-block-product-image default-image">
+                  <img src="../../assets/images/products/mcr-005/mcr-005.webp" alt="" class="merch-block-product-image default-image">
                   <img src="../../assets/images/products/mcr-005/mcr-005-hover.webp" alt="" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
@@ -503,7 +503,7 @@
             <a href="../new-005/" class="merch-link">
               <div class="merch-block">
                 <div class="merch-block-image-container">
-                  <img src="../../assets/images/products/new-005/new-005.webp" alt="Product Image" class="merch-block-product-image default-image">
+                  <img src="../../assets/images/products/new-005/new-005.webp" alt="" class="merch-block-product-image default-image">
                   <img src="../../assets/images/products/new-005/new-005-hover.webp" alt="" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
