--- a/store/mcr-010/index.html
+++ b/store/mcr-010/index.html
@@ -49,7 +49,7 @@
     <main class="product-section">
       <div class="product-content-container">
         <div class="product-image">
-          <img src="../../assets/images/products/mcr-010/mcr-010-full.webp" alt="Product Image">
+          <img src="../../assets/images/products/mcr-010/mcr-010-full.webp" alt="">
         </div>
         <div class="product-image-spacer"></div>
         <div class="product-details-container">
@@ -447,7 +447,7 @@
             <a href="../mcr-006/" class="merch-link">
               <div class="merch-block">
                 <div class="merch-block-image-container">
-                  <img src="../../assets/images/products/mcr-006/mcr-006.webp" alt="Product Image" class="merch-block-product-image default-image">
+                  <img src="../../assets/images/products/mcr-006/mcr-006.webp" alt="" class="merch-block-product-image default-image">
                   <img src="../../assets/images/products/mcr-006/mcr-006-hover.webp" alt="" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
@@ -465,7 +465,7 @@
             <a href="../mcr-002/" class="merch-link">
               <div class="merch-block">
                 <div class="merch-block-image-container">
-                  <img src="../../assets/images/products/mcr-002/mcr-002.webp" alt="Product Image" class="merch-block-product-image default-image">
+                  <img src="../../assets/images/products/mcr-002/mcr-002.webp" alt="" class="merch-block-product-image default-image">
                   <img src="../../assets/images/products/mcr-002/mcr-002-hover.webp" alt="" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
@@ -483,7 +483,7 @@
             <a href="../mcr-007/" class="merch-link">
               <div class="merch-block">
                 <div class="merch-block-image-container">
-                  <img src="../../assets/images/products/mcr-007/mcr-007.webp" alt="Product Image" class="merch-block-product-image default-image">
+                  <img src="../../assets/images/products/mcr-007/mcr-007.webp" alt="" class="merch-block-product-image default-image">
                   <img src="../../assets/images/products/mcr-007/mcr-007-hover.webp" alt="" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
@@ -501,7 +501,7 @@
             <a href="../new-005/" class="merch-link">
               <div class="merch-block">
                 <div class="merch-block-image-container">
-                  <img src="../../assets/images/products/new-005/new-005.webp" alt="Product Image" class="merch-block-product-image default-image">
+                  <img src="../../assets/images/products/new-005/new-005.webp" alt="" class="merch-block-product-image default-image">
                   <img src="../../assets/images/products/new-005/new-005-hover.webp" alt="" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
