--- a/cryhard/index.html
+++ b/cryhard/index.html
@@ -62,12 +62,41 @@
         <!-- <img src="../../assets/images/artists/idiot-mile/idiot-mile-live.webp" alt="" class="artist-image is-square"> -->
 
         <div class="artist-bar">
-          <div class="bandcamp-player">
-            <iframe style="border: 0; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=1387178041/size=small/bgcol=ffffff/linkcol=333333/artwork=none/transparent=true/" seamless><a href="https://cryhardtypebeat.bandcamp.com/album/of-course-i-will">Of Course I Will by Cryhard</a></iframe>
+          <div class="mcr-player" data-src="https://pub-71fb7e7f7f0047dbad1804034514d1b0.r2.dev/cryhard/Cryhard%20-%20Mind%20Flayer.mp3">
+            <button class="mcr-player__btn" type="button" aria-label="Play">
+              <span class="icon icon--play" aria-hidden="true">
+                <svg viewBox="0 0 24 24" aria-hidden="true">
+                  <path d="M7 5v14l11-7-11-7z"
+                    fill="none"
+                    stroke="currentColor"
+                    stroke-width="1"
+                    stroke-linejoin="round" />
+                </svg>
+              </span>
+
+              <span class="icon icon--pause" aria-hidden="true">
+                <svg viewBox="0 0 24 24" aria-hidden="true">
+                  <path d="M6.75 6h2.5v12h-2.5zM12.75 6h2.5v12h-2.5z"></path>
+                </svg>
+              </span>
+            </button>
+
+            <div class="mcr-player__meta">
+              <div class="mcr-player__row">
+                <button class="mcr-player__label" type="button">
+                  Listen Now
+                </button>
+                <span class="mcr-player__track">Cryhard - Mind Flayer</span>
+              </div>
+
+              <audio class="mcr-player__audio" preload="metadata"></audio>
+            </div>
           </div>
 
           <div class="artist-social-icons">
-            <!-- <a href=""><img src="../../assets/images/social-icons/facebook-icon.svg" alt="Facebook Icon"></a> -->
+            <a href="https://music.apple.com/us/artist/cryhard/1598717642"><img src="../../assets/images/social-icons/apple-music-icon.webp" alt="Apple Music Icon"></a>
+            <a href="https://open.spotify.com/artist/34rOpTVLQjki1QYVqDhcdx"><img src="../../assets/images/social-icons/spotify-icon.webp" alt="Spotify Icon"></a>
+            <!-- <a href=""><img src="../../assets/images/social-icons/bandcamp-icon.webp" alt="Bandcamp Icon"></a> -->
             <a href="https://www.instagram.com/cryhardtypebeat/"><img src="../../assets/images/social-icons/instagram-icon.svg" alt="Instagram Icon"></a>
             <a href="https://www.youtube.com/@Cryhardtypebeat"><img src="../../assets/images/social-icons/youtube-icon.svg" alt="YouTube Icon"></a>
             <a href="https://www.tiktok.com/@cryhardtypebeat"><img src="../../assets/images/social-icons/tiktok-icon.svg" alt="TikTok Icon"></a>
@@ -101,7 +130,7 @@
             <a href="../../store/cryhrd-001/" class="merch-link">
               <div class="merch-block">
                 <div class="merch-block-image-container">
-                  <img src="../../assets/images/products/cryhrd-001/cryhrd-001.webp" alt="Product Image" class="merch-block-product-image default-image">
+                  <img src="../../assets/images/products/cryhrd-001/cryhrd-001.webp" alt="" class="merch-block-product-image default-image">
                   <img src="../../assets/images/products/cryhrd-001/cryhrd-001-hover.webp" alt="" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
@@ -119,7 +148,7 @@
             <a href="../../store/mcr-002/" class="merch-link">
               <div class="merch-block">
                 <div class="merch-block-image-container">
-                  <img src="../../assets/images/products/mcr-002/mcr-002.webp" alt="Product Image" class="merch-block-product-image default-image">
+                  <img src="../../assets/images/products/mcr-002/mcr-002.webp" alt="" class="merch-block-product-image default-image">
                   <img src="../../assets/images/products/mcr-002/mcr-002-hover.webp" alt="" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
@@ -137,7 +166,7 @@
             <a href="../../store/mcr-003/" class="merch-link">
               <div class="merch-block">
                 <div class="merch-block-image-container">
-                  <img src="../../assets/images/products/mcr-003/mcr-003.webp" alt="Product Image" class="merch-block-product-image default-image">
+                  <img src="../../assets/images/products/mcr-003/mcr-003.webp" alt="" class="merch-block-product-image default-image">
                   <img src="../../assets/images/products/mcr-003/mcr-003-hover.webp" alt="" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
@@ -155,7 +184,7 @@
             <a href="../../store/mcr-001/" class="merch-link">
               <div class="merch-block">
                 <div class="merch-block-image-container">
-                  <img src="../../assets/images/products/mcr-001/mcr-001.webp" alt="Product Image" class="merch-block-product-image default-image">
+                  <img src="../../assets/images/products/mcr-001/mcr-001.webp" alt="" class="merch-block-product-image default-image">
                   <img src="../../assets/images/products/mcr-001/mcr-001-hover.webp" alt="" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
@@ -225,5 +254,6 @@
     <script src="../../assets/scripts/CartRefresh.js" async></script>
     <script src="../../assets/scripts/MobileHeaderExpand.js"></script>
     <script src="../../assets/scripts/MerchBlockScrollSwap.js"></script>
+    <script src="../../assets/scripts/McrPlayer.js"></script>
     </body>
 </html>
