--- a/store/index.html
+++ b/store/index.html
@@ -54,7 +54,7 @@
           <a href="cryhrd-001/" class="merch-link">
             <div class="merch-block">
               <div class="merch-block-image-container">
-                <img src="../assets/images/products/cryhrd-001/cryhrd-001.webp" alt="Product Image" class="merch-block-product-image default-image">
+                <img src="../assets/images/products/cryhrd-001/cryhrd-001.webp" alt="" class="merch-block-product-image default-image">
                 <img src="../assets/images/products/cryhrd-001/cryhrd-001-hover.webp" alt="" class="merch-block-product-image hover-image">
               </div>
               <div class="merch-block-details-container">
@@ -72,7 +72,7 @@
           <a href="mcr-012/" class="merch-link">
             <div class="merch-block">
               <div class="merch-block-image-container">
-                <img src="../assets/images/products/mcr-012/mcr-012.webp" alt="Product Image" class="merch-block-product-image default-image">
+                <img src="../assets/images/products/mcr-012/mcr-012.webp" alt="" class="merch-block-product-image default-image">
                 <img src="../assets/images/products/mcr-012/mcr-012-hover.webp" alt="" class="merch-block-product-image hover-image">
               </div>
               <div class="merch-block-details-container">
@@ -90,7 +90,7 @@
           <a href="mcr-011/" class="merch-link">
             <div class="merch-block">
               <div class="merch-block-image-container">
-                <img src="../assets/images/products/mcr-011/mcr-011.webp" alt="Product Image" class="merch-block-product-image default-image">
+                <img src="../assets/images/products/mcr-011/mcr-011.webp" alt="" class="merch-block-product-image default-image">
                 <img src="../assets/images/products/mcr-011/mcr-011-hover.webp" alt="" class="merch-block-product-image hover-image">
               </div>
               <div class="merch-block-details-container">
@@ -108,7 +108,7 @@
           <a href="mcr-009/" class="merch-link">
             <div class="merch-block">
               <div class="merch-block-image-container">
-                <img src="../assets/images/products/mcr-009/mcr-009.webp" alt="Product Image" class="merch-block-product-image default-image">
+                <img src="../assets/images/products/mcr-009/mcr-009.webp" alt="" class="merch-block-product-image default-image">
                 <img src="../assets/images/products/mcr-009/mcr-009-hover.webp" alt="" class="merch-block-product-image hover-image">
               </div>
               <div class="merch-block-details-container">
@@ -126,7 +126,7 @@
           <a href="pndl-001/" class="merch-link">
             <div class="merch-block">
               <div class="merch-block-image-container">
-                <img src="../assets/images/products/pndl-001/pndl-001.webp" alt="Product Image" class="merch-block-product-image default-image">
+                <img src="../assets/images/products/pndl-001/pndl-001.webp" alt="" class="merch-block-product-image default-image">
                 <img src="../assets/images/products/pndl-001/pndl-001.webp" alt="" class="merch-block-product-image hover-image">
               </div>
               <div class="merch-block-details-container">
@@ -144,7 +144,7 @@
           <a href="mcr-010/" class="merch-link">
             <div class="merch-block">
               <div class="merch-block-image-container">
-                <img src="../assets/images/products/mcr-010/mcr-010.webp" alt="Product Image" class="merch-block-product-image default-image">
+                <img src="../assets/images/products/mcr-010/mcr-010.webp" alt="" class="merch-block-product-image default-image">
                 <img src="../assets/images/products/mcr-010/mcr-010-hover.webp" alt="" class="merch-block-product-image hover-image">
               </div>
               <div class="merch-block-details-container">
@@ -162,7 +162,7 @@
           <a href="mcr-008/" class="merch-link">
             <div class="merch-block">
               <div class="merch-block-image-container">
-                <img src="../assets/images/products/mcr-008/mcr-008.webp" alt="Product Image" class="merch-block-product-image default-image">
+                <img src="../assets/images/products/mcr-008/mcr-008.webp" alt="" class="merch-block-product-image default-image">
                 <img src="../assets/images/products/mcr-008/mcr-008-hover.webp" alt="" class="merch-block-product-image hover-image">
               </div>
               <div class="merch-block-details-container">
@@ -180,7 +180,7 @@
           <a href="mcr-007/" class="merch-link">
             <div class="merch-block">
               <div class="merch-block-image-container">
-                <img src="../assets/images/products/mcr-007/mcr-007.webp" alt="Product Image" class="merch-block-product-image default-image">
+                <img src="../assets/images/products/mcr-007/mcr-007.webp" alt="" class="merch-block-product-image default-image">
                 <img src="../assets/images/products/mcr-007/mcr-007-hover.webp" alt="" class="merch-block-product-image hover-image">
               </div>
               <div class="merch-block-details-container">
@@ -198,7 +198,7 @@
           <a href="mcr-006/" class="merch-link">
             <div class="merch-block">
               <div class="merch-block-image-container">
-                <img src="../assets/images/products/mcr-006/mcr-006.webp" alt="Product Image" class="merch-block-product-image default-image">
+                <img src="../assets/images/products/mcr-006/mcr-006.webp" alt="" class="merch-block-product-image default-image">
                 <img src="../assets/images/products/mcr-006/mcr-006-hover.webp" alt="" class="merch-block-product-image hover-image">
               </div>
               <div class="merch-block-details-container">
@@ -216,7 +216,7 @@
           <a href="mcr-005/" class="merch-link">
             <div class="merch-block">
               <div class="merch-block-image-container">
-                <img src="../assets/images/products/mcr-005/mcr-005.webp" alt="Product Image" class="merch-block-product-image default-image">
+                <img src="../assets/images/products/mcr-005/mcr-005.webp" alt="" class="merch-block-product-image default-image">
                 <img src="../assets/images/products/mcr-005/mcr-005-hover.webp" alt="" class="merch-block-product-image hover-image">
               </div>
               <div class="merch-block-details-container">
@@ -234,7 +234,7 @@
           <a href="mcr-004/" class="merch-link">
             <div class="merch-block">
               <div class="merch-block-image-container">
-                <img src="../assets/images/products/mcr-004/mcr-004.webp" alt="Product Image" class="merch-block-product-image default-image">
+                <img src="../assets/images/products/mcr-004/mcr-004.webp" alt="" class="merch-block-product-image default-image">
                 <img src="../assets/images/products/mcr-004/mcr-004-hover.webp" alt="" class="merch-block-product-image hover-image">
               </div>
               <div class="merch-block-details-container">
@@ -252,7 +252,7 @@
           <a href="new-005/" class="merch-link">
             <div class="merch-block">
               <div class="merch-block-image-container">
-                <img src="../assets/images/products/new-005/new-005.webp" alt="Product Image" class="merch-block-product-image default-image">
+                <img src="../assets/images/products/new-005/new-005.webp" alt="" class="merch-block-product-image default-image">
                 <img src="../assets/images/products/new-005/new-005-hover.webp" alt="" class="merch-block-product-image hover-image">
               </div>
               <div class="merch-block-details-container">
@@ -270,7 +270,7 @@
           <a href="mcr-003/" class="merch-link">
             <div class="merch-block">
               <div class="merch-block-image-container">
-                <img src="../assets/images/products/mcr-003/mcr-003.webp" alt="Product Image" class="merch-block-product-image default-image">
+                <img src="../assets/images/products/mcr-003/mcr-003.webp" alt="" class="merch-block-product-image default-image">
                 <img src="../assets/images/products/mcr-003/mcr-003-hover.webp" alt="" class="merch-block-product-image hover-image">
               </div>
               <div class="merch-block-details-container">
@@ -288,7 +288,7 @@
           <a href="mcr-001/" class="merch-link">
             <div class="merch-block">
               <div class="merch-block-image-container">
-                <img src="../assets/images/products/mcr-001/mcr-001.webp" alt="Product Image" class="merch-block-product-image default-image">
+                <img src="../assets/images/products/mcr-001/mcr-001.webp" alt="" class="merch-block-product-image default-image">
                 <img src="../assets/images/products/mcr-001/mcr-001-hover.webp" alt="" class="merch-block-product-image hover-image">
               </div>
               <div class="merch-block-details-container">
@@ -306,7 +306,7 @@
           <a href="mcr-002/" class="merch-link">
             <div class="merch-block">
               <div class="merch-block-image-container">
-                <img src="../assets/images/products/mcr-002/mcr-002.webp" alt="Product Image" class="merch-block-product-image default-image">
+                <img src="../assets/images/products/mcr-002/mcr-002.webp" alt="" class="merch-block-product-image default-image">
                 <img src="../assets/images/products/mcr-002/mcr-002-hover.webp" alt="" class="merch-block-product-image hover-image">
               </div>
               <div class="merch-block-details-container">
